example/deployment/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: edhouse
  labels:
    app: my-deployment
spec:
  replicas: 100
  selector:
    matchLabels:
      app: my-app-deployment
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 5%
  template:
    metadata:
      labels:
        app: my-app-deployment
    spec:
      containers:
      - name: my-app
        image: my-frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      terminationGracePeriodSeconds: 10
