example/deployment/k8s-manifests/service_clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: my-app-deployment
  ports:
  - name: http
    port: 80
    targetPort: 3000
