example/deployment/k8s-manifests/service_nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-nodeport
  namespace: edhouse
spec:
  type: NodePort
  selector:
    app: my-app-deployment
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    nodePort: 30000
